include/core_cm3.h

  #define __NVIC_PRIO_BITS    4               
#define NVIC_AIRCR_VECTKEY    (0x5FA << 16)   
typedef struct
{
  __IO uint32_t ISER[8];                      
       uint32_t RESERVED0[24];
  __IO uint32_t ICER[8];                      
       uint32_t RSERVED1[24];
  __IO uint32_t ISPR[8];                      
       uint32_t RESERVED2[24];
  __IO uint32_t ICPR[8];                      
       uint32_t RESERVED3[24];
  __IO uint32_t IABR[8];                      
       uint32_t RESERVED4[56];
  __IO uint8_t  IP[240];                      
       uint32_t RESERVED5[644];
  __O  uint32_t STIR;                         
}  NVIC_Type;
typedef struct
{
  __I  uint32_t CPUID;                        
  __IO uint32_t ICSR;                         
  __IO uint32_t VTOR;                         
  __IO uint32_t AIRCR;                        
  __IO uint32_t SCR;                          
  __IO uint32_t CCR;                          
  __IO uint8_t  SHP[12];                      
  __IO uint32_t SHCSR;                        
  __IO uint32_t CFSR;                         
  __IO uint32_t HFSR;                         
  __IO uint32_t DFSR;                         
  __IO uint32_t MMFAR;                        
  __IO uint32_t BFAR;                         
  __IO uint32_t AFSR;                         
  __I  uint32_t PFR[2];                       
  __I  uint32_t DFR;                          
  __I  uint32_t ADR;                          
  __I  uint32_t MMFR[4];                      
  __I  uint32_t ISAR[5];                      
} SCB_Type;
typedef struct
{
  __IO uint32_t CTRL;                         
  __IO uint32_t LOAD;                         
  __IO uint32_t VAL;                          
  __I  uint32_t CALIB;                        
} SysTick_Type;
typedef struct
{
  __O  union
  {
    __O  uint8_t    u8;                       
    __O  uint16_t   u16;                      
    __O  uint32_t   u32;                      
  }  PORT [32];                               
       uint32_t RESERVED0[864];
  __IO uint32_t TER;                          
       uint32_t RESERVED1[15];
  __IO uint32_t TPR;                          
       uint32_t RESERVED2[15];
  __IO uint32_t TCR;                          
       uint32_t RESERVED3[29];
  __IO uint32_t IWR;                          
  __IO uint32_t IRR;                          
  __IO uint32_t IMCR;                         
       uint32_t RESERVED4[43];
  __IO uint32_t LAR;                          
  __IO uint32_t LSR;                          
       uint32_t RESERVED5[6];
  __I  uint32_t PID4;                         
  __I  uint32_t PID5;
  __I  uint32_t PID6;
  __I  uint32_t PID7;
  __I  uint32_t PID0;
  __I  uint32_t PID1;
  __I  uint32_t PID2;
  __I  uint32_t PID3;
  __I  uint32_t CID0;
  __I  uint32_t CID1;
  __I  uint32_t CID2;
  __I  uint32_t CID3;
} ITM_Type;
typedef struct
{
       uint32_t RESERVED0;
  __I  uint32_t ICTR;                         
#if ((defined __CM3_REV) && (__CM3_REV >= 0x200))
  __IO uint32_t ACTLR;                        
#else
       uint32_t RESERVED1;
#endif
} InterruptType_Type;
typedef struct
{
  __I  uint32_t TYPE;                         
  __IO uint32_t CTRL;                         
  __IO uint32_t RNR;                          
  __IO uint32_t RBAR;                         
  __IO uint32_t RASR;                         
  __IO uint32_t RBAR_A1;                      
  __IO uint32_t RASR_A1;                      
  __IO uint32_t RBAR_A2;                      
  __IO uint32_t RASR_A2;                      
  __IO uint32_t RBAR_A3;                      
  __IO uint32_t RASR_A3;                      
} MPU_Type;
typedef struct
{
  __IO uint32_t DHCSR;                        
  __O  uint32_t DCRSR;                        
  __IO uint32_t DCRDR;                        
  __IO uint32_t DEMCR;                        
} CoreDebug_Type;
#define SCB                 ((SCB_Type *)           SCB_BASE)         
#define SysTick             ((SysTick_Type *)       SysTick_BASE)     
#define NVIC                ((NVIC_Type *)          NVIC_BASE)        
static inline void __enable_irq(void)  { __ASM volatile ("cpsie i"); }
static inline void __disable_irq(void) { __ASM volatile ("cpsid i"); }
static inline void __enable_fault_irq(void)  { __ASM volatile ("cpsie f"); }
static inline void __disable_fault_irq(void) { __ASM volatile ("cpsid f"); }
static inline void __NOP(void)     { __ASM volatile ("nop"); }
static inline void __WFI(void)     { __ASM volatile ("wfi"); }
static inline void __WFE(void)     { __ASM volatile ("wfe"); }
static inline void __SEV(void)     { __ASM volatile ("sev"); }
static inline void __ISB(void)     { __ASM volatile ("isb"); }
static inline void __DSB(void)     { __ASM volatile ("dsb"); }
static inline void __DMB(void)     { __ASM volatile ("dmb"); }
static inline void __CLREX(void)   { __ASM volatile ("clrex"); }
extern uint32_t __get_PSP(void);
extern void __set_PSP(uint32_t topOfProcStack);
extern uint32_t __get_MSP(void);
extern void __set_MSP(uint32_t topOfMainStack);
extern uint32_t __get_BASEPRI(void);
extern void __set_BASEPRI(uint32_t basePri);
extern uint32_t  __get_PRIMASK(void);
extern void __set_PRIMASK(uint32_t priMask);
extern uint32_t __get_FAULTMASK(void);
extern void __set_FAULTMASK(uint32_t faultMask);
extern uint32_t __get_CONTROL(void);
extern void __set_CONTROL(uint32_t control);
extern uint32_t __REV(uint32_t value);
extern uint32_t __REV16(uint16_t value);
extern int32_t __REVSH(int16_t value);
extern uint32_t __RBIT(uint32_t value);
extern uint8_t __LDREXB(uint8_t *addr);
extern uint16_t __LDREXH(uint16_t *addr);
extern uint32_t __LDREXW(uint32_t *addr);
extern uint32_t __STREXB(uint8_t value, uint8_t *addr);
extern uint32_t __STREXH(uint16_t value, uint16_t *addr);
extern uint32_t __STREXW(uint32_t value, uint32_t *addr);
static inline void NVIC_SetPriorityGrouping(uint32_t PriorityGroup)
{
  uint32_t reg_value;
  uint32_t PriorityGroupTmp = (PriorityGroup & 0x07);                         
  reg_value  = SCB->AIRCR;                                                    
  reg_value &= ~((0xFFFFU << 16) | (0x0F << 8));                              
  reg_value  = ((reg_value | NVIC_AIRCR_VECTKEY | (PriorityGroupTmp << 8)));  
  SCB->AIRCR = reg_value;
}
static inline uint32_t NVIC_GetPriorityGrouping(void)
{
  return ((SCB->AIRCR >> 8) & 0x07);                                          
}
static inline void NVIC_SetHandler(IRQn_Type IRQnr, uint32_t ISRHandler)
{
	*((uint32_t*)(SCB->VTOR)+IRQnr+16) = ISRHandler;
}
static inline void NVIC_EnableIRQ(IRQn_Type IRQn)
{
  NVIC->ISER[((uint32_t)(IRQn) >> 5)] = (1 << ((uint32_t)(IRQn) & 0x1F)); 
}
static inline void NVIC_DisableIRQ(IRQn_Type IRQn)
{
  NVIC->ICER[((uint32_t)(IRQn) >> 5)] = (1 << ((uint32_t)(IRQn) & 0x1F)); 
}
static inline uint32_t NVIC_GetPendingIRQ(IRQn_Type IRQn)
{
  return((uint32_t) ((NVIC->ISPR[(uint32_t)(IRQn) >> 5] & (1 << ((uint32_t)(IRQn) & 0x1F)))?1:0)); 
}
static inline void NVIC_SetPendingIRQ(IRQn_Type IRQn)
{
  NVIC->ISPR[((uint32_t)(IRQn) >> 5)] = (1 << ((uint32_t)(IRQn) & 0x1F)); 
}
static inline void NVIC_ClearPendingIRQ(IRQn_Type IRQn)
{
  NVIC->ICPR[((uint32_t)(IRQn) >> 5)] = (1 << ((uint32_t)(IRQn) & 0x1F)); 
}
static inline uint32_t NVIC_GetActive(IRQn_Type IRQn)
{
  return((uint32_t)((NVIC->IABR[(uint32_t)(IRQn) >> 5] & (1 << ((uint32_t)(IRQn) & 0x1F)))?1:0)); 
}
static inline void NVIC_SetPriority(IRQn_Type IRQn, uint32_t priority)
{
  if(IRQn < 0) {
    SCB->SHP[((uint32_t)(IRQn) & 0xF)-4] = ((priority << (8 - __NVIC_PRIO_BITS)) & 0xff); } 
  else {
    NVIC->IP[(uint32_t)(IRQn)] = ((priority << (8 - __NVIC_PRIO_BITS)) & 0xff);    }        
}