include/lpc17xx.h


typedef enum IRQn
{
  NonMaskableInt_IRQn           = -14,      
  MemoryManagement_IRQn         = -12,      
  BusFault_IRQn                 = -11,      
  UsageFault_IRQn               = -10,      
  SVCall_IRQn                   = -5,       
  DebugMonitor_IRQn             = -4,       
  PendSV_IRQn                   = -2,       
  SysTick_IRQn                  = -1,       
  WDT_IRQn                      = 0,        
  TIMER0_IRQn                   = 1,        
  TIMER1_IRQn                   = 2,        
  TIMER2_IRQn                   = 3,        
  TIMER3_IRQn                   = 4,        
  UART0_IRQn                    = 5,        
  UART1_IRQn                    = 6,        
  UART2_IRQn                    = 7,        
  UART3_IRQn                    = 8,        
  PWM1_IRQn                     = 9,        
  I2C0_IRQn                     = 10,       
  I2C1_IRQn                     = 11,       
  I2C2_IRQn                     = 12,       
  SPI_IRQn                      = 13,       
  SSP0_IRQn                     = 14,       
  SSP1_IRQn                     = 15,       
  PLL0_IRQn                     = 16,       
  RTC_IRQn                      = 17,       
  EINT0_IRQn                    = 18,       
  EINT1_IRQn                    = 19,       
  EINT2_IRQn                    = 20,       
  EINT3_IRQn                    = 21,       
  ADC_IRQn                      = 22,       
  BOD_IRQn                      = 23,       
  USB_IRQn                      = 24,       
  CAN_IRQn                      = 25,       
  DMA_IRQn                      = 26,       
  I2S_IRQn                      = 27,       
  ENET_IRQn                     = 28,       
  RIT_IRQn                      = 29,       
  MCPWM_IRQn                    = 30,       
  QEI_IRQn                      = 31,       
  PLL1_IRQn                     = 32,       
} IRQn_Type;
#define __MPU_PRESENT             1         
#define __Vendor_SysTickConfig    0         