libs/lpc1786/lpc1786.zig

// Result from translate-c:

const std = @import("std");

test "" {
    std.meta.refAllDecls(@This());
}

pub inline fn __enable_irq() void {
    asm volatile ("cpsie i");
}
pub inline fn __disable_irq() void {
    asm volatile ("cpsid i");
}

pub inline fn __enable_fault_irq() void {
    asm volatile ("cpsie f");
}
pub inline fn __disable_fault_irq() void {
    asm volatile ("cpsid f");
}

pub inline fn __NOP() void {
    asm volatile ("nop");
}
pub inline fn __WFI() void {
    asm volatile ("wfi");
}
pub inline fn __WFE() void {
    asm volatile ("wfe");
}
pub inline fn __SEV() void {
    asm volatile ("sev");
}
pub inline fn __ISB() void {
    asm volatile ("isb");
}
pub inline fn __DSB() void {
    asm volatile ("dsb");
}
pub inline fn __DMB() void {
    asm volatile ("dmb");
}
pub inline fn __CLREX() void {
    asm volatile ("clrex");
}

pub const NonMaskableInt_IRQn = @enumToInt(IRQn.NonMaskableInt);
pub const MemoryManagement_IRQn = @enumToInt(IRQn.MemoryManagement);
pub const BusFault_IRQn = @enumToInt(IRQn.BusFault);
pub const UsageFault_IRQn = @enumToInt(IRQn.UsageFault);
pub const SVCall_IRQn = @enumToInt(IRQn.SVCall);
pub const DebugMonitor_IRQn = @enumToInt(IRQn.DebugMonitor);
pub const PendSV_IRQn = @enumToInt(IRQn.PendSV);
pub const SysTick_IRQn = @enumToInt(IRQn.SysTick);
pub const WDT_IRQn = @enumToInt(IRQn.WDT);
pub const TIMER0_IRQn = @enumToInt(IRQn.TIMER0);
pub const TIMER1_IRQn = @enumToInt(IRQn.TIMER1);
pub const TIMER2_IRQn = @enumToInt(IRQn.TIMER2);
pub const TIMER3_IRQn = @enumToInt(IRQn.TIMER3);
pub const UART0_IRQn = @enumToInt(IRQn.UART0);
pub const UART1_IRQn = @enumToInt(IRQn.UART1);
pub const UART2_IRQn = @enumToInt(IRQn.UART2);
pub const UART3_IRQn = @enumToInt(IRQn.UART3);
pub const PWM1_IRQn = @enumToInt(IRQn.PWM1);
pub const I2C0_IRQn = @enumToInt(IRQn.I2C0);
pub const I2C1_IRQn = @enumToInt(IRQn.I2C1);
pub const I2C2_IRQn = @enumToInt(IRQn.I2C2);
pub const SPI_IRQn = @enumToInt(IRQn.SPI);
pub const SSP0_IRQn = @enumToInt(IRQn.SSP0);
pub const SSP1_IRQn = @enumToInt(IRQn.SSP1);
pub const PLL0_IRQn = @enumToInt(IRQn.PLL0);
pub const RTC_IRQn = @enumToInt(IRQn.RTC);
pub const EINT0_IRQn = @enumToInt(IRQn.EINT0);
pub const EINT1_IRQn = @enumToInt(IRQn.EINT1);
pub const EINT2_IRQn = @enumToInt(IRQn.EINT2);
pub const EINT3_IRQn = @enumToInt(IRQn.EINT3);
pub const ADC_IRQn = @enumToInt(IRQn.ADC);
pub const BOD_IRQn = @enumToInt(IRQn.BOD);
pub const USB_IRQn = @enumToInt(IRQn.USB);
pub const CAN_IRQn = @enumToInt(IRQn.CAN);
pub const DMA_IRQn = @enumToInt(IRQn.DMA);
pub const I2S_IRQn = @enumToInt(IRQn.I2S);
pub const ENET_IRQn = @enumToInt(IRQn.ENET);
pub const RIT_IRQn = @enumToInt(IRQn.RIT);
pub const MCPWM_IRQn = @enumToInt(IRQn.MCPWM);
pub const QEI_IRQn = @enumToInt(IRQn.QEI);
pub const PLL1_IRQn = @enumToInt(IRQn.PLL1);

pub const IRQn = extern enum(isize) {
    NonMaskableInt = -14,
    MemoryManagement = -12,
    BusFault = -11,
    UsageFault = -10,
    SVCall = -5,
    DebugMonitor = -4,
    PendSV = -2,
    SysTick = -1,
    WDT = 0,
    TIMER0 = 1,
    TIMER1 = 2,
    TIMER2 = 3,
    TIMER3 = 4,
    UART0 = 5,
    UART1 = 6,
    UART2 = 7,
    UART3 = 8,
    PWM1 = 9,
    I2C0 = 10,
    I2C1 = 11,
    I2C2 = 12,
    SPI = 13,
    SSP0 = 14,
    SSP1 = 15,
    PLL0 = 16,
    RTC = 17,
    EINT0 = 18,
    EINT1 = 19,
    EINT2 = 20,
    EINT3 = 21,
    ADC = 22,
    BOD = 23,
    USB = 24,
    CAN = 25,
    DMA = 26,
    I2S = 27,
    ENET = 28,
    RIT = 29,
    MCPWM = 30,
    QEI = 31,
    PLL1 = 32,
    _,
};

pub const NVIC_Type = extern struct {
    ISER: [8]u32,
    RESERVED0: [24]u32,
    ICER: [8]u32,
    RSERVED1: [24]u32,
    ISPR: [8]u32,
    RESERVED2: [24]u32,
    ICPR: [8]u32,
    RESERVED3: [24]u32,
    IABR: [8]u32,
    RESERVED4: [56]u32,
    IP: [240]u8,
    RESERVED5: [644]u32,
    STIR: u32,
};

pub const SCB_Type = extern struct {
    CPUID: u32,
    ICSR: u32,
    VTOR: u32,
    AIRCR: u32,
    SCR: u32,
    CCR: u32,
    SHP: [12]u8,
    SHCSR: u32,
    CFSR: u32,
    HFSR: u32,
    DFSR: u32,
    MMFAR: u32,
    BFAR: u32,
    AFSR: u32,
    PFR: [2]u32,
    DFR: u32,
    ADR: u32,
    MMFR: [4]u32,
    ISAR: [5]u32,
};

pub const SysTick_Type = extern struct {
    CTRL: u32,
    LOAD: u32,
    VAL: u32,
    CALIB: u32,
};

const union_unnamed_5 = extern union {
    u8: u8,
    u16: u16,
    u32: u32,
};

pub const ITM_Type = extern struct {
    PORT: [32]union_unnamed_5,
    RESERVED0: [864]u32,
    TER: u32,
    RESERVED1: [15]u32,
    TPR: u32,
    RESERVED2: [15]u32,
    TCR: u32,
    RESERVED3: [29]u32,
    IWR: u32,
    IRR: u32,
    IMCR: u32,
    RESERVED4: [43]u32,
    LAR: u32,
    LSR: u32,
    RESERVED5: [6]u32,
    PID4: u32,
    PID5: u32,
    PID6: u32,
    PID7: u32,
    PID0: u32,
    PID1: u32,
    PID2: u32,
    PID3: u32,
    CID0: u32,
    CID1: u32,
    CID2: u32,
    CID3: u32,
};

pub const InterruptType_Type = extern struct {
    RESERVED0: u32,
    ICTR: u32,
    RESERVED1: u32,
};

pub const MPU_Type = extern struct {
    TYPE: u32,
    CTRL: u32,
    RNR: u32,
    RBAR: u32,
    RASR: u32,
    RBAR_A1: u32,
    RASR_A1: u32,
    RBAR_A2: u32,
    RASR_A2: u32,
    RBAR_A3: u32,
    RASR_A3: u32,
};

pub const CoreDebug_Type = extern struct {
    DHCSR: u32,
    DCRSR: u32,
    DCRDR: u32,
    DEMCR: u32,
};

pub extern fn __get_PSP() u32;
pub extern fn __set_PSP(topOfProcStack: u32) void;
pub extern fn __get_MSP() u32;
pub extern fn __set_MSP(topOfMainStack: u32) void;
pub extern fn __get_BASEPRI() u32;
pub extern fn __set_BASEPRI(basePri: u32) void;
pub extern fn __get_PRIMASK() u32;
pub extern fn __set_PRIMASK(priMask: u32) void;
pub extern fn __get_FAULTMASK() u32;
pub extern fn __set_FAULTMASK(faultMask: u32) void;
pub extern fn __get_CONTROL() u32;
pub extern fn __set_CONTROL(control: u32) void;
pub extern fn __REV(value: u32) u32;
pub extern fn __REV16(value: u16) u32;
pub extern fn __REVSH(value: i16) i32;
pub extern fn __RBIT(value: u32) u32;
pub extern fn __LDREXB(addr: [*c]u8) u8;
pub extern fn __LDREXH(addr: [*c]u16) u16;
pub extern fn __LDREXW(addr: [*c]u32) u32;
pub extern fn __STREXB(value: u8, addr: [*c]u8) u32;
pub extern fn __STREXH(value: u16, addr: [*c]u16) u32;
pub extern fn __STREXW(value: u32, addr: [*c]u32) u32;

pub inline fn NVIC_SetPriorityGrouping(PriorityGroup: u32) void {
    const PriorityGroupTmp = (PriorityGroup & 0x07); // only values 0..7 are used

    var reg_value = SCB.AIRCR; // read old register configuration
    reg_value &= ~((0xFFFF << 16) | (0x0F << 8)); // clear bits to change
    reg_value = ((reg_value | NVIC_AIRCR_VECTKEY | (PriorityGroupTmp << 8))); // Insert write key and priorty group
    SCB.AIRCR = reg_value;
}

// pub fn NVIC_GetPriorityGrouping() callconv(.C) u32 {
//     return (((@intToPtr([*c]SCB_Type, ((@as(c_uint, 3758153728)) +% @bitCast(c_uint, @as(c_int, 3328))))).*.AIRCR >> @intCast(u5, 8)) & @bitCast(c_uint, @as(c_int, 7)));
// }

pub inline fn NVIC_SetHandler(irq: IRQn, handler: *allowzero const c_void) void {
    const base = @intToPtr([*]u32, SCB.VTOR);
    const offset = @intCast(usize, 16 + @enumToInt(irq));
    base[offset] = @bitCast(u32, @ptrToInt(handler));
}

// pub fn NVIC_EnableIRQ(arg_IRQn_1: IRQn) callconv(.C) void {
//     var IRQn_1 = arg_IRQn_1;
//     (@intToPtr([*c]NVIC_Type, ((@as(c_uint, 3758153728)) +% @bitCast(c_uint, @as(c_int, 256))))).*.ISER[(@enumToInt((IRQn_1)) >> @intCast(u5, 5))] = @bitCast(u32, (@as(c_int, 1) << @intCast(std.math.Log2Int(c_int), (@enumToInt((IRQn_1)) & @bitCast(c_uint, @as(c_int, 31))))));
// }
// pub fn NVIC_DisableIRQ(arg_IRQn_1: IRQn) callconv(.C) void {
//     var IRQn_1 = arg_IRQn_1;
//     (@intToPtr([*c]NVIC_Type, ((@as(c_uint, 3758153728)) +% @bitCast(c_uint, @as(c_int, 256))))).*.ICER[(@enumToInt((IRQn_1)) >> @intCast(u5, 5))] = @bitCast(u32, (@as(c_int, 1) << @intCast(std.math.Log2Int(c_int), (@enumToInt((IRQn_1)) & @bitCast(c_uint, @as(c_int, 31))))));
// }
// pub fn NVIC_GetPendingIRQ(arg_IRQn_1: IRQn) callconv(.C) u32 {
//     var IRQn_1 = arg_IRQn_1;
//     return (@bitCast(u32, (if (((@intToPtr([*c]NVIC_Type, ((@as(c_uint, 3758153728)) +% @bitCast(c_uint, @as(c_int, 256))))).*.ISPR[@enumToInt((IRQn_1)) >> @intCast(u5, 5)] & @bitCast(c_uint, (@as(c_int, 1) << @intCast(std.math.Log2Int(c_int), (@enumToInt((IRQn_1)) & @bitCast(c_uint, @as(c_int, 31))))))) != 0) @as(c_int, 1) else @as(c_int, 0))));
// }
// pub fn NVIC_SetPendingIRQ(arg_IRQn_1: IRQn) callconv(.C) void {
//     var IRQn_1 = arg_IRQn_1;
//     (@intToPtr([*c]NVIC_Type, ((@as(c_uint, 3758153728)) +% @bitCast(c_uint, @as(c_int, 256))))).*.ISPR[(@enumToInt((IRQn_1)) >> @intCast(u5, 5))] = @bitCast(u32, (@as(c_int, 1) << @intCast(std.math.Log2Int(c_int), (@enumToInt((IRQn_1)) & @bitCast(c_uint, @as(c_int, 31))))));
// }
// pub fn NVIC_ClearPendingIRQ(arg_IRQn_1: IRQn) callconv(.C) void {
//     var IRQn_1 = arg_IRQn_1;
//     (@intToPtr([*c]NVIC_Type, ((@as(c_uint, 3758153728)) +% @bitCast(c_uint, @as(c_int, 256))))).*.ICPR[(@enumToInt((IRQn_1)) >> @intCast(u5, 5))] = @bitCast(u32, (@as(c_int, 1) << @intCast(std.math.Log2Int(c_int), (@enumToInt((IRQn_1)) & @bitCast(c_uint, @as(c_int, 31))))));
// }
// pub fn NVIC_GetActive(arg_IRQn_1: IRQn) callconv(.C) u32 {
//     var IRQn_1 = arg_IRQn_1;
//     return (@bitCast(u32, (if (((@intToPtr([*c]NVIC_Type, ((@as(c_uint, 3758153728)) +% @bitCast(c_uint, @as(c_int, 256))))).*.IABR[@enumToInt((IRQn_1)) >> @intCast(u5, 5)] & @bitCast(c_uint, (@as(c_int, 1) << @intCast(std.math.Log2Int(c_int), (@enumToInt((IRQn_1)) & @bitCast(c_uint, @as(c_int, 31))))))) != 0) @as(c_int, 1) else @as(c_int, 0))));
// }

const __MPU_PRESENT = 1;
const __NVIC_PRIO_BITS = 5;
const __Vendor_SysTickConfig = 0;

pub inline fn NVIC_SetPriority(irq: IRQn, priority: u32) void {
    const irq_number = @enumToInt(irq);
    if (irq_number < 0) {
        // set Priority for Cortex-M3 System Interrupts
        SCB.SHP[@intCast(u32, irq_number & 0xF) - 4] = @truncate(u8, priority << (8 - __NVIC_PRIO_BITS));
    } else { // set Priority for device specific Interrupts
        NVIC.IP[@intCast(u32, irq_number)] = @truncate(u8, priority << (8 - __NVIC_PRIO_BITS));
    }
}
